2nd commit, not completed yet

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button class="checking">Check</button>
       </header>
       <div class="form1 hide">
+        <p class="result hide">Result: postive statement</p>
         <textarea class="texting" name="message" rows="20" cols="40"></textarea>
         <br />
 
